# TinyBord

./: .gitmodules  CMakeLists.txt  README.md  tinyBord.cfg
app/: main.cpp  retarget.cpp
cmake/: stm32gnu.cmake
driver/inc/: esp8266_os.h  esp8266_test.h  serial.h
driver/src/: esp8266_os.cpp  esp8266_test.cpp  serial.cpp
stm32cubemx/: CMakeLists.txt  Makefile  STM32F411CEUx_FLASH.ld  cmake_install.cmake  start.ioc
stm32cubemx/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
stm32cubemx/Core/Src/: adc.c  gpio.c  i2c.c  main.c  spi.c  stm32f4xx_it.c  syscalls.c  usart.c
thirdlib/CMSIS/Config/: RTE_Components.h
thirdlib/U8G2/: CMakeLists.txt
thirdlib/U8G2/Config/: oled_u8g2.h
thirdlib/cmsis_lib/: CMakeLists.txt  Makefile  cmake_install.cmake
thirdlib/u8g2_lib/: CMakeLists.txt  Makefile  cmake_install.cmake
thirdlib/u8g2_lib/Config/: oled_u8g2.c
utils/kfifo/: kfifo.cpp  kfifo.h
